Second activity UI.

--- a/app/src/main/res/layout/activity_add_contribution.xml
+++ b/app/src/main/res/layout/activity_add_contribution.xml
@@ -1,6 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".AddContributionActivity"
+    android:background="@color/layout_color"
+    android:gravity="center"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="260dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/app_logo" />
+
+    <EditText
+        android:id="@+id/titleEditText"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_edittext"
+        android:hint="@string/contributionTitleID"
+        android:textColor="@color/text_color"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
+        android:id="@+id/numberEditText"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_edittext"
+        android:hint="@string/noOfContributionsID"
+        android:inputType="number"
+        android:textColor="@color/text_color"
+        android:layout_marginBottom="16dp"/>
+
+    <EditText
+        android:id="@+id/descriptionEditText"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:background="@drawable/rounded_edittext"
+        android:hint="@string/contributionDescriptionID"
+        android:textColor="@color/text_color"
+
+        android:layout_marginBottom="16dp"/>
+
+    <!-- Button to Save Contribution -->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/saveButton"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
+        android:text="@string/saveContributionID"
+        android:textSize="18sp"
+        android:background="@drawable/rounded_button"
+        android:textColor="@color/text_color"
+        android:gravity="center"
+        android:layout_marginBottom="16dp"/>
+
+</LinearLayout>
