--- a/app/src/main/res/layout/contribution_item.xml
+++ b/app/src/main/res/layout/contribution_item.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- contribution_item.xml -->
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -7,6 +6,31 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <!-- Add your UI components for each item in the RecyclerView here -->
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:textStyle="bold"/>
 
+    <TextView
+        android:id="@+id/platformTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:textStyle="italic"/>
+
+    <TextView
+        android:id="@+id/numberOfContributionsTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"/>
+
+    <TextView
+        android:id="@+id/descriptionTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#888888"/>
 </LinearLayout>
+
